# TMAS-Traversability-Mine-Analysis-System

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  TMAS.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
configs/: default.yaml
configs/models/: mine_detection.yaml  obstacle_detection.yaml
configs/sensors/: camera_calibration.yaml.template
docs/: NEXT_STEPS_PROPOSAL.md  PHASE5_SUMMARY.md  PHASE6_NEXT_3_STEPS_FINAL.md  PHASE6_PROGRESS_AND_NEXT_STEPS.md  PROGRESS_ANALYSIS.md  data_acquisition.md
scripts/data_preparation/: download_rellis3d.py
scripts/data_preparation/synthetic/: README.md  auto_annotate.py  batch_render.py  create_placeholder_mines.py  domain_randomization.py  lighting_weather.py  mine_placement.py  setup_blender.sh  terrain_generator.py  thermal_simulation.py  visualize_annotations.py
scripts/data_preparation/synthetic/mine_models/: README.md
scripts/training/: train_mine_detection.py  train_terrain_segmentation.py
src/tmas/: __init__.py
src/tmas/bev/: __init__.py  bev_transform.py  terrain_cost_map.py
src/tmas/core/: __init__.py  config.py
src/tmas/data/: __init__.py  augmentation.py  obstacle_dataset.py  registry.py  rellis3d.py  synthetic.py  thermal.py
src/tmas/depth/: __init__.py  depth_calibration.py  monocular_depth.py
src/tmas/detection/: __init__.py  mine_detector.py  obstacle_detector.py  obstacle_inference.py  rtdetr.py  sudden_obstacle.py  ttc.py
src/tmas/fusion/: __init__.py  cross_attention.py
src/tmas/losses/: __init__.py  detection_loss.py
src/tmas/models/backbone/: __init__.py  efficientvit.py  resnet.py
src/tmas/segmentation/: __init__.py  terrain_segmenter.py
src/tmas/tracking/: __init__.py  byte_tracker.py  trajectory_prediction.py
src/tmas/uncertainty/: __init__.py  evidential.py
src/tmas/utils/: __init__.py  logging.py  losses.py  metrics.py
tests/: conftest.py
tests/unit/: test_config.py  test_dataloaders.py  test_logging.py
